<resources>
    <string name="app_name">Fast Food City</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_enter_number">Укажи свой телефон</string>
    <string name="tv_enter_number_label">Чтобы войти в профиль и получать персональные предложения, участвовать в акциях и многое другое</string>
    <string name="code_verification_tv_large">Введи код из SMS</string>
    <string name="code_verification_tv_medium">Код отправлен на ваш номер</string>
    <string name="next_btn">Получить код в SMS</string>
    <string name="phone_fragment_label">Авторизация</string>
    <string name="menu_fragment_label">Меню</string>
    <string name="code_fragment_label">Подтверждение</string>
    <string name="register_toast_enter_phone">Введите номер телефона</string>
    <string name="international_number_ru">+7</string>
    <string name="map_fragment_label">Карта</string>
    <string name="cart_fragment_label">Корзина</string>
    <string name="food_price">%s ₽</string>
    <string name="price_with_currency">%d ₽</string>
    <string name="add_to_cart_btn">В корзину %s ₽</string>
    <string name="tv_description">Описание</string>
    <string name="burger_test_name">Бургер Чили Чиз</string>
    <string name="clear_tv_button">Очистить</string>
    <string name="text_order_price">Сумма заказа</string>
    <string name="text_payment_button">Оплатить заказ на %d ₽</string>
    <string name="tv_basket_is_empty">Корзина пуста</string>
    <string name="hind_code">123456</string>
    <string name="hint_number">6505553434</string>
    <string name="title_clear_dialog">Очистить корзину?</string>
    <string name="supporting_text_clear_dialog">Мы удалим все содержимое вашей корзины</string>
    <string name="cancel">Отмена</string>
</resources>