<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/menuFragment">

    <fragment
        android:id="@+id/enterPhoneNumber"
        android:name="com.example.fastfoodcity.ui.EnterPhoneNumberFragment"
        android:label="@string/phone_fragment_label"
        tools:layout="@layout/fragment_enter_phone_number" >
        <action
            android:id="@+id/action_enterPhoneNumber_to_enterCode"
            app:destination="@id/enterCode" />
        <action
            android:id="@+id/action_enterPhoneNumber_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.example.fastfoodcity.ui.MenuFragment"
        android:label="@string/menu_fragment_label"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/enterCode"
        android:name="com.example.fastfoodcity.ui.EnterCodeFragment"
        android:label="@string/code_fragment_label"
        tools:layout="@layout/fragment_enter_code" >
        <action
            android:id="@+id/action_enterCode_to_menuFragment"
            app:destination="@id/menuFragment" />
    </fragment>
    <fragment
        android:id="@+id/basketFragment"
        android:name="com.example.fastfoodcity.ui.BasketFragment"
        android:label="fragment_basket"
        tools:layout="@layout/fragment_basket" />
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.fastfoodcity.ui.MapFragment"
        android:label="fragment_map"
        tools:layout="@layout/fragment_map" />
</navigation>